# Chatbot

./: README.md
backend/: .env  .gitignore  README.md  config.py  main.py  pyproject.toml
backend/app/: __init__.py  email.py  models.py
backend/app/auth/: views.py
backend/app/main/: bot.ipynb  random_responses.py  views.py
backend/app/templates/email/: confirm.html  confirm.txt
backend/migrations/versions/: 0952b24748b6_add_confirmed_column_to_the_user_table.py  127720933804_initial_migration.py  14011b5bed34_.py  14f9c0fbb4ba_set_up_db.py  877cebb3e5ff_make_conversation_name_non_unique.py  b326e708b4c6_rename_password_column_to_password_hash.py  c769a11fc400_prefer_uuid_over_auto_incremented_id.py
backend/tests/: test_setup.py
frontend/french-bot/: package-lock.json  package.json
frontend/french-bot/src/: components.d.ts  index.html
frontend/french-bot/src/assets/styles/: global.scss
frontend/french-bot/src/components/: app-root.scss  app-root.tsx  login-screen.scss  login-screen.tsx
frontend/french-bot/src/components/body/: app-body.scss  app-body.tsx  bot-response.scss  bot-response.tsx  input-field.scss  input-field.tsx
frontend/french-bot/src/components/login/: login-buttons.tsx  login-form.tsx  login-screen.tsx  register-form.tsx  types.ts
frontend/french-bot/src/components/sidebar/: logout-button.tsx  sidebar-conversations.scss  sidebar-conversations.tsx  sidebar.scss  sidebar.tsx
frontend/french-bot/src/global/: app.css
frontend/french-bot/src/store/: auth-store.ts  convo-store.ts
frontend/french-bot/src/types/: conversation.ts
(+2 files in other folders)
