[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of the chatbot app"
authors = ["Lawrence Borst"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
werkzeug = "^3.1.3"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
